added code to change audio speed, gain, and add background noise

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,8 @@ RUN apt install -y libsndfile1
 RUN pip3 install librosa
 RUN pip3 install pydub
 RUN apt install ffmpeg -y
+RUN apt install libgstreamer1.0-0 -y
+RUN pip3 install PyGObject
 RUN set -o vi
 CMD ["bash"]
 
