bug fix in background noise chunks generation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,7 @@ RUN pip3 install pydub
 RUN apt install ffmpeg -y
 RUN apt install libgstreamer1.0-0 -y
 RUN pip3 install PyGObject
+RUN pip3 install python_speech_features
 RUN set -o vi
 CMD ["bash"]
 
